--- a/style.css
+++ b/style.css
@@ -253,6 +253,17 @@ footer {
         font-size: 16px;
     }
 }
+.section-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+
 
 
 
